src/style.css
/* ... */
.map-icon {
    width: 502px;
    height: 320px;
    border: 20px solid transparent;
    border-image-source: url(../Assets/UI/BarfillContainer.png);
    border-image-slice: 40;
    background-color: #9F7842;
    border-radius: 20px;
    margin: 0 5px;
}
.map-progress-subtext {
    font-size: 24px;
    padding: 10px;
    color: white;
    font-family: 'GardeniaBold';
}
.map-left-column {
    display: flex;
    flex-direction: column;
    align-items: center;
}
.map-progress-medals {
    display: flex;
    width: 350px;
    flex-wrap: wrap;
    justify-content: center;
    background-color: var(--profile-secondary);
    margin: 10px 0;
    border-radius: 20px;
    /* padding: 10px; */
    padding: 10px 80px;
    border-width: 20px;
}
.map-below-header-bar {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
}
.right-column-header {
    display: flex;
    justify-content: space-between;
}
.no-data-found {
    text-align: center;
    font-size: 32px;
    background-color: rgba(0,0,0,0.2);
    padding: 10px;
    border-radius: 10px;
    width: 50%;
    margin: 0 auto;
}

.map-progress-container {
    background-color: var(--profile-primary);
    border-radius: 10px;
    padding-bottom: 20px;
    margin-bottom: 20px;
    width: 100%;
    flex-direction: column;
    align-content: space-around;
}
.single-map-progress-header-bar {
    display: flex;
    justify-content: space-between;
    padding: 10px;
}
.map-next-and-prev {
    display: flex;
}
.map-right-column {
    width: 550px;
    background-color: var(--profile-secondary);
    border-radius: 10px;
}
.map-stats-div {
    display: flex;
    background-color: var(--profile-tertiary);
    border-radius: 10px;
    margin: 10px;
}
.map-stats-icon {
    width: 80px;
    object-fit: contain;
    padding: 10px 10px;
}
.map-stats-text-mode {
    font-size: 28px;
}
.map-stats-text {
    font-size: 24px;
    color: white;
    font-family: 'GardeniaBold';
}
.map-stats-text-div {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}
.maps-game-grid {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    min-height: 540px;
    align-items: center;
}
.map-img-ingame {
    width: 298px;
    height: 190px;
    image-rendering: crisp-edges;
    image-rendering: -moz-crisp-edges;
    image-rendering: -o-crisp-edges;
    image-rendering: -webkit-optimize-contrast;
}
.map-div-ingame {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 10px;
    border-radius: 20px;
    position: relative;
    padding-bottom: 40px;
}
.maps-progress-container {
    width: 100%;
    background-color: var(--profile-secondary);
    padding-bottom: 20px;
    margin-bottom: 20px;
    border-radius: 0 10px 10px 0;
}
.maps-game-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.medal-div-large {
    display: flex;
    position: absolute;
    width: 70px;
    height: 70px;
    justify-content: center;
    align-items: flex-end;
    padding: 5px 0px;
}
.medal-div-small {
    display: flex;
    position: absolute;
    width: 70px;
    height: 70px;
    justify-content: center;
    align-items: flex-end;
    padding: 5px 0px;
    transform: scale(0.6);
}
.medal-div-easy {
    left: 0%;
    top: 160px;
}
.medal-div-medium {
    left: 25%;
    top: 160px;
}
.medal-div-hard {
    left: 50%;
    top: 160px;
}
.medal-div-impoppable {
    left: 75%;
    top: 160px;
}
.medal-div-primaryonly{
    left: -8%;
    top: 180px;
}
.medal-div-deflation {
    left: 8%;
    top: 180px;
}
.medal-div-militaryonly {
    left: 17%;
    top: 180px;
}
.medal-div-reverse {
    left: 33%;
    top: 180px;
}
.medal-div-apopalypse {
    left: 25%;
    top: 190px;
    z-index: 3;
}
.medal-div-magiconly {
    left: 40%;
    top: 160px;
}
.medal-div-alternatebloonsrounds {
    left: 60%;
    top: 160px;
}
.medal-div-doublemoabhealth {
    left: 45%;
    top: 185px;
}
.medal-div-halfcash {
    left: 55%;
    top: 185px;
    z-index: 3;
}
.medal-div-clicks {
    left: 67%;
    top: 185px;
}
.medal-div-chimps-black {
    left: 83%;
    top: 185px;
}
.medal-div-unobtained{
    filter: opacity(0.2);
}
.map-arrow-img {
    width: 50px;
    padding: 0 12px 0 0;
}
.map-page-dots {
    display: flex;
    justify-content: center;
    padding-top: 20px;
}
.map-page-dot {
    background-image: url(../Assets/UI/PagePipOff.png);
    width: 30px;
    height: 30px;
    background-size: contain;
    background-repeat: no-repeat;
    padding: 0 10px;
}
.map-page-dot-active {
    background-image: url(../Assets/UI/PagePipOn.png);
}
.map-name-game {
    position: absolute;
    font-size: 20px;
}

.powers-progress-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}
.power-div {
    background-image: url(../Assets/UI/PowerContainer.png);
    width: 150px;
    height: 150px;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    margin: 20px 10px;
}
.power-img{
    width: 100px;
    height: 100px;
    object-fit: contain;
}
.power-name {
    position: absolute;
    /* bottom: 0; */
    top: 90%;
    font-size: 22px;
    width: 190px;
    text-align: center;
}
.power-progress {
    position: absolute;
    background-image: url(../Assets/UI/NotificationYellow.png);
    width: 50px;
    height: 50px;
    background-size: contain;
    display: flex;
    justify-content: center;
    align-items: center;
    top: 10%;
    right: 0%;
}
.power-progress-text {
    font-size: 28px;
}


.insta-monkeys-header-bar {
    display: flex;
    justify-content: space-between;
    /* padding: 10px; */
    width: 100%;
    background-color: var(--profile-primary);
    border-radius: 10px;
}
.towers-container {
    max-width: 850px;
    display: flex;
    flex-wrap: wrap;
}
/* ... */

